# compass

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements-lock.txt
compass/planner/: __init__.py  aqm.py  pareto.py  profiler.py
compass/search/: __init__.py  compass_v.py  evaluator.py  parameter_space.py
compass/serving/: __init__.py  controller.py  executor.py  load_generator.py  monitor.py  queue.py
data/: squad_questions.json
docs/: adding_a_workflow.md  reproducing_paper.md
experiments/: run_baseline.py  run_planner.py  run_search.py  run_serving.py
plotting/: plot_search.py  plot_serving.py
results/planner/: latency_profiles.json  pareto_frontier.json
results/search/rag/: grid_100.json
results/search/vision/: compass_v.json  grid_search.json
results/search/vision/multi_slo/: slo_0.55.json  slo_0.6.json  slo_0.65.json  slo_0.7.json  slo_0.73.json  slo_0.77.json  slo_0.78.json  summary.json
results/serving/run5/ramp_slo1000/: baseline_accurate.json  baseline_fastest.json  baseline_middle.json  elastico.json
results/serving/run5/ramp_slo1500/: baseline_accurate.json  baseline_fastest.json  baseline_middle.json  elastico.json
results/serving/run5/ramp_slo500/: baseline_accurate.json  baseline_fastest.json  baseline_middle.json  elastico.json
scripts/: reproduce_paper.sh  setup_ollama.sh
workflows/rag/: __init__.py  build_index.py  configs.py  evaluator.py  generator.py  reranker.py  retriever.py  utils.py  workflow.py
workflows/vision/: __init__.py  configs.py  download_coco.py  evaluator.py  pipeline.py
(+35 files in other folders)
